--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -16,7 +16,8 @@ DashboardScreen As screen:
     ctnMainDS As groupContainer.horizontalAutoLayoutContainer:
         DropShadow: =DropShadow.None
         Fill: =RGBA(237, 237, 237, 1)
-        Height: =Parent.Height
+        Height: |
+            =Parent.Height
         LayoutAlignItems: =LayoutAlignItems.Stretch
         LayoutDirection: =LayoutDirection.Vertical
         LayoutGap: =10
@@ -264,7 +265,7 @@ DashboardScreen As screen:
             LayoutMode: =LayoutMode.Auto
             LayoutOverflowY: =LayoutOverflow.Scroll
             PaddingBottom: =5
-            PaddingTop: =10
+            PaddingTop: =5
             Width: =Parent.Width-20
             ZIndex: =4
 
@@ -293,7 +294,7 @@ DashboardScreen As screen:
                     Fill: =RGBA(219, 219, 219, 1)
                     FillPortions: =0
                     Height: |
-                        =Parent.Height/1.08
+                        =Parent.Height/1.05
                     LayoutMinHeight: =80
                     LayoutMinWidth: =250
                     Width: =Parent.Width/3.35
@@ -434,7 +435,7 @@ DashboardScreen As screen:
                     Fill: =RGBA(219, 219, 219, 1)
                     FillPortions: =0
                     Height: |
-                        =Parent.Height/1.08
+                        =Parent.Height/1.05
                     LayoutMinHeight: =80
                     LayoutMinWidth: =250
                     Width: =Parent.Width/3.35
@@ -574,7 +575,7 @@ DashboardScreen As screen:
                     Fill: =RGBA(219, 219, 219, 1)
                     FillPortions: =0
                     Height: |
-                        =Parent.Height/1.08
+                        =Parent.Height/1.05
                     LayoutMinHeight: =80
                     LayoutMinWidth: =250
                     Width: =Parent.Width/3.35
@@ -708,7 +709,7 @@ DashboardScreen As screen:
                     DropShadow: =DropShadow.Semilight
                     Fill: =RGBA(219, 219, 219, 1)
                     FillPortions: =0
-                    Height: =Parent.Height/1.05
+                    Height: =Parent.Height/1.02
                     LayoutMinHeight: =80
                     LayoutMinWidth: =250
                     Width: =Parent.Width/2.2
@@ -866,7 +867,7 @@ DashboardScreen As screen:
                     DropShadow: =DropShadow.Semilight
                     Fill: =RGBA(219, 219, 219, 1)
                     FillPortions: =0
-                    Height: =Parent.Height/1.05
+                    Height: =Parent.Height/1.02
                     LayoutMinHeight: =80
                     LayoutMinWidth: =250
                     Width: =Parent.Width/2.2
@@ -1097,7 +1098,7 @@ DashboardScreen As screen:
                 AlignInContainer: =AlignInContainer.Center
                 DropShadow: =DropShadow.None
                 FillPortions: =0
-                Height: =Parent.Height-ctnCreateLeadDS.Height-ctnLeadsButtonDS.Height-ctnLeadsButtonDS.Height-100
+                Height: =Parent.Height-ctnCreateLeadDS.Height-ctnLeadsButtonDS.Height-ctnLeadsButtonDS.Height-200
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
                 RadiusBottomLeft: =0
