--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -326,7 +326,7 @@ DashboardScreen As screen:
                             DisplayMode: =DisplayMode.View
                             Font: =Font.Arial
                             FontWeight: =FontWeight.Bold
-                            Height: =28
+                            Height: =If(Parent.Width>Parent.Height,24,28)
                             LineHeight: =1.05
                             OnSelect: =Set(VarPopup,true)
                             Size: |-
@@ -467,7 +467,7 @@ DashboardScreen As screen:
                             DisplayMode: =DisplayMode.View
                             Font: =Font.Arial
                             FontWeight: =FontWeight.Bold
-                            Height: =28
+                            Height: =If(Parent.Width>Parent.Height,24,28)
                             LineHeight: =1.05
                             OnSelect: =Set(VarPopup,true)
                             Size: |-
@@ -593,7 +593,7 @@ DashboardScreen As screen:
                             DisplayMode: =DisplayMode.View
                             Font: =Font.Arial
                             FontWeight: =FontWeight.Bold
-                            Height: =28
+                            Height: =If(Parent.Width>Parent.Height,24,28)
                             LineHeight: =1.05
                             OnSelect: =Set(VarPopup,true)
                             Size: |-
@@ -777,7 +777,7 @@ DashboardScreen As screen:
                             DisplayMode: =DisplayMode.View
                             Font: =Font.Arial
                             FontWeight: =FontWeight.Bold
-                            Height: =28
+                            Height: =If(Parent.Width>Parent.Height,24,28)
                             LineHeight: =1.05
                             OnSelect: =Set(VarPopup,true)
                             Size: |-
@@ -950,7 +950,7 @@ DashboardScreen As screen:
                             DisplayMode: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'))=0,DisplayMode.Disabled,DisplayMode.Edit)
                             Font: =Font.Arial
                             FontWeight: =FontWeight.Bold
-                            Height: =28
+                            Height: =If(Parent.Width>Parent.Height,24,28)
                             LineHeight: =1.05
                             OnSelect: =Set(VarPopup,true)
                             Size: |-
