--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -712,13 +712,13 @@ LeadSummaryScreen As screen:
                             Height: =50
                             HoverFill: =RGBA(0, 0, 0, 0)
                             InputTextPlaceholder: ="Find Scope"
-                            Items: =' PrimaryScopeofWorks'
+                            Items: =GCPrimaryScopeofWorks
                             OnChange: =Set(VarScopeSummary,CboxScopeLSS.SelectedItems)
                             OnSelect: =
                             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                             PressedFill: =RGBA(0, 0, 0, 1)
                             SearchFields: =["shlrf_primaryscopeofworkname"]
-                            SearchItems: =Search(' PrimaryScopeofWorks',CboxScopeLSS.SearchText,"shlrf_primaryscopeofworkname")
+                            SearchItems: =Search(GCPrimaryScopeofWorks,CboxScopeLSS.SearchText,"shlrf_primaryscopeofworkname")
                             SelectionFill: =RGBA(0, 0, 0, 1)
                             SelectMultiple: =false
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
@@ -799,13 +799,13 @@ LeadSummaryScreen As screen:
                             InputTextPlaceholder: =If(IsBlank(IntxtManuallyScopeofWorkLSS.Text),"Scope of work *","Scope of work ")
                             Items: |-
                                 =//Choices([@LeadInformations].ScopeOfWorkLID)
-                                Filter(SecondaryScopeofWorks,PrimaryScopeofWorkLID.'PrimaryScopeofWorkName '=CboxScope.Selected.'PrimaryScopeofWorkName ')
+                                Filter(GCSecondaryScopeofWorks,PrimaryScopeofWorkLID.'PrimaryScopeofWorkName '=CboxScope.Selected.'PrimaryScopeofWorkName ')
                             OnChange: =Set(VarScopeofworkSummary,CboxScopeofWorkLSS.Selected)
                             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
                             SearchFields: =["shlrf_secondaryscopeofworkname"]
                             SearchItems: |-
                                 =Search(//Choices([@LeadInformations].ScopeOfWorkLID)
-                                Filter(SecondaryScopeofWorks,PrimaryScopeofWorkLID.'PrimaryScopeofWorkName '=CboxScope.Selected.'PrimaryScopeofWorkName '),CboxScopeofWorkLSS.SearchText,"shlrf_secondaryscopeofworkname")
+                                Filter(GCSecondaryScopeofWorks,PrimaryScopeofWorkLID.'PrimaryScopeofWorkName '=CboxScope.Selected.'PrimaryScopeofWorkName '),CboxScopeofWorkLSS.SearchText,"shlrf_secondaryscopeofworkname")
                             SelectionFill: =RGBA(202, 202, 202, 1)
                             SelectMultiple: =false
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
@@ -2368,11 +2368,11 @@ LeadSummaryScreen As screen:
                                     NumberofUnits: Value(IntxtUnitCountLSS.Text),
                                     UnitDescription: IntxtUnitDescriptionLSS.Text,
                                     PrimaryScopeofWorkLID: LookUp(
-                                            ' PrimaryScopeofWorks',
+                                            GCPrimaryScopeofWorks,
                                         ID = CboxScopeLSS.Selected.ID
                                     ),
                                     SecondaryScopeofWorkLID:LookUp(
-                                        SecondaryScopeofWorks,
+                                        GCSecondaryScopeofWorks,
                                         ID = CboxScopeofWorkLSS.Selected.ID
                                     ),
                                     CustomScopeofWork: IntxtManuallyScopeofWorkLSS.Text,
